--- a/src/app.html
+++ b/src/app.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="/favicon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <style>
-            html, body {
+            html,
+            body {
                 min-height: 100vh;
             }
         </style>
-		%svelte.head%
-	</head>
-	<body>
-		<div id="svelte">%svelte.body%</div>
-	</body>
+        %svelte.head%
+    </head>
+    <body>
+        <div id="svelte">%svelte.body%</div>
+    </body>
 </html>
