Upgrade kit / site-kit / google libs

--- a/src/app.html
+++ b/src/app.html
@@ -10,9 +10,9 @@
                 min-height: 100vh;
             }
         </style>
-        %svelte.head%
+        %sveltekit.head%
     </head>
     <body>
-        <div id="svelte">%svelte.body%</div>
+        %sveltekit.body%
     </body>
 </html>
